--- a/linear-reg-assignment-akg.ipynb
+++ b/linear-reg-assignment-akg.ipynb
@@ -421,284 +421,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-05-25T15:56:59.501856Z",
-     "start_time": "2022-05-25T15:56:59.434626Z"
-    }
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Formatted Date</th>\n",
-       "      <th>Summary</th>\n",
-       "      <th>Precip Type</th>\n",
-       "      <th>Temperature (C)</th>\n",
-       "      <th>Apparent Temperature (C)</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Wind Speed (km/h)</th>\n",
-       "      <th>Wind Bearing (degrees)</th>\n",
-       "      <th>Visibility (km)</th>\n",
-       "      <th>Loud Cover</th>\n",
-       "      <th>Pressure (millibars)</th>\n",
-       "      <th>Daily Summary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>52672</th>\n",
-       "      <td>2012-04-11 16:00:00.000 +0200</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19.016667</td>\n",
-       "      <td>19.016667</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>14.8764</td>\n",
-       "      <td>163.0</td>\n",
-       "      <td>9.982</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1002.40</td>\n",
-       "      <td>Mostly cloudy until night.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52674</th>\n",
-       "      <td>2012-04-11 18:00:00.000 +0200</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>17.850000</td>\n",
-       "      <td>17.850000</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>13.7977</td>\n",
-       "      <td>169.0</td>\n",
-       "      <td>9.982</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1001.79</td>\n",
-       "      <td>Mostly cloudy until night.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52675</th>\n",
-       "      <td>2012-04-11 19:00:00.000 +0200</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>16.322222</td>\n",
-       "      <td>16.322222</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>10.8192</td>\n",
-       "      <td>151.0</td>\n",
-       "      <td>9.982</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1001.60</td>\n",
-       "      <td>Mostly cloudy until night.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52677</th>\n",
-       "      <td>2012-04-11 21:00:00.000 +0200</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>12.566667</td>\n",
-       "      <td>12.566667</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>9.0160</td>\n",
-       "      <td>159.0</td>\n",
-       "      <td>9.982</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1001.92</td>\n",
-       "      <td>Mostly cloudy until night.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52678</th>\n",
-       "      <td>2012-04-11 22:00:00.000 +0200</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>12.927778</td>\n",
-       "      <td>12.927778</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>17.6295</td>\n",
-       "      <td>197.0</td>\n",
-       "      <td>16.100</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1002.20</td>\n",
-       "      <td>Mostly cloudy until night.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95584</th>\n",
-       "      <td>2016-10-31 19:00:00.000 +0100</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.322222</td>\n",
-       "      <td>7.044444</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>8.0339</td>\n",
-       "      <td>290.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1021.73</td>\n",
-       "      <td>Mostly cloudy starting in the afternoon.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95585</th>\n",
-       "      <td>2016-10-31 20:00:00.000 +0100</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.627778</td>\n",
-       "      <td>6.183333</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>8.2271</td>\n",
-       "      <td>293.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1021.76</td>\n",
-       "      <td>Mostly cloudy starting in the afternoon.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95586</th>\n",
-       "      <td>2016-10-31 21:00:00.000 +0100</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.111111</td>\n",
-       "      <td>5.511111</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>8.5008</td>\n",
-       "      <td>297.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1021.81</td>\n",
-       "      <td>Mostly cloudy starting in the afternoon.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95587</th>\n",
-       "      <td>2016-10-31 22:00:00.000 +0100</td>\n",
-       "      <td>Partly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.672222</td>\n",
-       "      <td>4.961111</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>8.6457</td>\n",
-       "      <td>299.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1021.83</td>\n",
-       "      <td>Mostly cloudy starting in the afternoon.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95588</th>\n",
-       "      <td>2016-10-31 23:00:00.000 +0100</td>\n",
-       "      <td>Mostly Cloudy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.322222</td>\n",
-       "      <td>4.588889</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>8.4686</td>\n",
-       "      <td>299.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1021.80</td>\n",
-       "      <td>Mostly cloudy starting in the afternoon.</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>517 rows × 12 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                      Formatted Date        Summary Precip Type  \\\n",
-       "52672  2012-04-11 16:00:00.000 +0200  Mostly Cloudy         NaN   \n",
-       "52674  2012-04-11 18:00:00.000 +0200  Mostly Cloudy         NaN   \n",
-       "52675  2012-04-11 19:00:00.000 +0200  Mostly Cloudy         NaN   \n",
-       "52677  2012-04-11 21:00:00.000 +0200  Mostly Cloudy         NaN   \n",
-       "52678  2012-04-11 22:00:00.000 +0200  Mostly Cloudy         NaN   \n",
-       "...                              ...            ...         ...   \n",
-       "95584  2016-10-31 19:00:00.000 +0100  Mostly Cloudy         NaN   \n",
-       "95585  2016-10-31 20:00:00.000 +0100  Mostly Cloudy         NaN   \n",
-       "95586  2016-10-31 21:00:00.000 +0100  Mostly Cloudy         NaN   \n",
-       "95587  2016-10-31 22:00:00.000 +0100  Partly Cloudy         NaN   \n",
-       "95588  2016-10-31 23:00:00.000 +0100  Mostly Cloudy         NaN   \n",
-       "\n",
-       "       Temperature (C)  Apparent Temperature (C)  Humidity  Wind Speed (km/h)  \\\n",
-       "52672        19.016667                 19.016667      0.26            14.8764   \n",
-       "52674        17.850000                 17.850000      0.28            13.7977   \n",
-       "52675        16.322222                 16.322222      0.32            10.8192   \n",
-       "52677        12.566667                 12.566667      0.43             9.0160   \n",
-       "52678        12.927778                 12.927778      0.47            17.6295   \n",
-       "...                ...                       ...       ...                ...   \n",
-       "95584         8.322222                  7.044444      0.85             8.0339   \n",
-       "95585         7.627778                  6.183333      0.87             8.2271   \n",
-       "95586         7.111111                  5.511111      0.89             8.5008   \n",
-       "95587         6.672222                  4.961111      0.90             8.6457   \n",
-       "95588         6.322222                  4.588889      0.91             8.4686   \n",
-       "\n",
-       "       Wind Bearing (degrees)  Visibility (km)  Loud Cover  \\\n",
-       "52672                   163.0            9.982         0.0   \n",
-       "52674                   169.0            9.982         0.0   \n",
-       "52675                   151.0            9.982         0.0   \n",
-       "52677                   159.0            9.982         0.0   \n",
-       "52678                   197.0           16.100         0.0   \n",
-       "...                       ...              ...         ...   \n",
-       "95584                   290.0            0.000         0.0   \n",
-       "95585                   293.0            0.000         0.0   \n",
-       "95586                   297.0            0.000         0.0   \n",
-       "95587                   299.0            0.000         0.0   \n",
-       "95588                   299.0            0.000         0.0   \n",
-       "\n",
-       "       Pressure (millibars)                             Daily Summary  \n",
-       "52672               1002.40                Mostly cloudy until night.  \n",
-       "52674               1001.79                Mostly cloudy until night.  \n",
-       "52675               1001.60                Mostly cloudy until night.  \n",
-       "52677               1001.92                Mostly cloudy until night.  \n",
-       "52678               1002.20                Mostly cloudy until night.  \n",
-       "...                     ...                                       ...  \n",
-       "95584               1021.73  Mostly cloudy starting in the afternoon.  \n",
-       "95585               1021.76  Mostly cloudy starting in the afternoon.  \n",
-       "95586               1021.81  Mostly cloudy starting in the afternoon.  \n",
-       "95587               1021.83  Mostly cloudy starting in the afternoon.  \n",
-       "95588               1021.80  Mostly cloudy starting in the afternoon.  \n",
-       "\n",
-       "[517 rows x 12 columns]"
+       "'2006-04-01 00:00:00.000 +0200'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_df = data_df[data_df[\"Precip Type\"].isnull()]\n",
-    "new_df"
+    "# checking if duplicate date rows exist\n",
+    "data_df['Formatted Date'].unique().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df['Loud Cover'].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "- Column 'Precip Type' has 517 nul value\n",
+    "- Date clolumn: 'Formatted Date' has duplicated value. So the dataframe has duplicated rows\n",
+    "- Column 'Loud Cover' has only null value. \n",
+    "\n"
    ]
   },
   {
