--- a/linear-reg-assignment-akg.ipynb
+++ b/linear-reg-assignment-akg.ipynb
@@ -472,6 +472,202 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preperations\n",
+    "- Drop duplicate rows \n",
+    "- Drop Loud Cover coulumn as it contains only null values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(96429, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_df = data_df.drop_duplicates(['Formatted Date'], keep= 'first')\n",
+    "print(data_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_df.sort_values(by= ['Formatted Date'], inplace= True)\n",
+    "data_df.reset_index(inplace=True, drop= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Formatted Date</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Precip Type</th>\n",
+       "      <th>Temperature (C)</th>\n",
+       "      <th>Apparent Temperature (C)</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Wind Speed (km/h)</th>\n",
+       "      <th>Wind Bearing (degrees)</th>\n",
+       "      <th>Visibility (km)</th>\n",
+       "      <th>Loud Cover</th>\n",
+       "      <th>Pressure (millibars)</th>\n",
+       "      <th>Daily Summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2006-01-01 00:00:00.000 +0100</td>\n",
+       "      <td>Partly Cloudy</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>0.577778</td>\n",
+       "      <td>-4.050000</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>17.1143</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>9.9820</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1016.66</td>\n",
+       "      <td>Mostly cloudy throughout the day.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2006-01-01 01:00:00.000 +0100</td>\n",
+       "      <td>Mostly Cloudy</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>1.161111</td>\n",
+       "      <td>-3.238889</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>16.6152</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>9.9015</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1016.15</td>\n",
+       "      <td>Mostly cloudy throughout the day.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2006-01-01 02:00:00.000 +0100</td>\n",
+       "      <td>Mostly Cloudy</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>-3.155556</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>20.2538</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>9.9015</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1015.87</td>\n",
+       "      <td>Mostly cloudy throughout the day.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2006-01-01 03:00:00.000 +0100</td>\n",
+       "      <td>Overcast</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>1.711111</td>\n",
+       "      <td>-2.194444</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>14.4900</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>9.9015</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1015.56</td>\n",
+       "      <td>Mostly cloudy throughout the day.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2006-01-01 04:00:00.000 +0100</td>\n",
+       "      <td>Mostly Cloudy</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>1.183333</td>\n",
+       "      <td>-2.744444</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>13.9426</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>9.9015</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1014.98</td>\n",
+       "      <td>Mostly cloudy throughout the day.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Formatted Date        Summary Precip Type  Temperature (C)  \\\n",
+       "0  2006-01-01 00:00:00.000 +0100  Partly Cloudy        rain         0.577778   \n",
+       "1  2006-01-01 01:00:00.000 +0100  Mostly Cloudy        rain         1.161111   \n",
+       "2  2006-01-01 02:00:00.000 +0100  Mostly Cloudy        rain         1.666667   \n",
+       "3  2006-01-01 03:00:00.000 +0100       Overcast        rain         1.711111   \n",
+       "4  2006-01-01 04:00:00.000 +0100  Mostly Cloudy        rain         1.183333   \n",
+       "\n",
+       "   Apparent Temperature (C)  Humidity  Wind Speed (km/h)  \\\n",
+       "0                 -4.050000      0.89            17.1143   \n",
+       "1                 -3.238889      0.85            16.6152   \n",
+       "2                 -3.155556      0.82            20.2538   \n",
+       "3                 -2.194444      0.82            14.4900   \n",
+       "4                 -2.744444      0.86            13.9426   \n",
+       "\n",
+       "   Wind Bearing (degrees)  Visibility (km)  Loud Cover  Pressure (millibars)  \\\n",
+       "0                   140.0           9.9820         0.0               1016.66   \n",
+       "1                   139.0           9.9015         0.0               1016.15   \n",
+       "2                   140.0           9.9015         0.0               1015.87   \n",
+       "3                   140.0           9.9015         0.0               1015.56   \n",
+       "4                   134.0           9.9015         0.0               1014.98   \n",
+       "\n",
+       "                       Daily Summary  \n",
+       "0  Mostly cloudy throughout the day.  \n",
+       "1  Mostly cloudy throughout the day.  \n",
+       "2  Mostly cloudy throughout the day.  \n",
+       "3  Mostly cloudy throughout the day.  \n",
+       "4  Mostly cloudy throughout the day.  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df.head()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
